syntax = "proto3";

package oms;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/igntnk/stocky-oms/proto/pb";

message Product {
  string uuid = 1;
  string name = 2;
  string product_code = 3;
  double customer_cost = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateRequest {
  string name = 1;
  string product_code = 2;
  double customer_cost = 3;
}

message UpdateRequest {
  string uuid = 1;
  optional string name = 2;
  optional string product_code = 3;
  optional double customer_cost = 4;
}

message GetRequest {
  string uuid = 1;
}

message ListRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListResponse {
  repeated Product products = 1;
}

message DeleteRequest {
  string uuid = 1;
}

message GetByOrderRequest {
  string order_uuid = 1;
}

service ProductService {
  rpc Create(CreateRequest) returns (Product);
  rpc Get(GetRequest) returns (Product);
  rpc List(ListRequest) returns (ListResponse);
  rpc Update(UpdateRequest) returns (Product);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc GetByOrder(GetByOrderRequest) returns (ListResponse);
}


enum OrderStatus {
  NEW = 0;
  PROCESSING = 1;
  COMPLETED = 2;
  CANCELLED = 3;
}

message Order {
  string uuid = 1;
  string comment = 2;
  string user_id = 3;
  string staff_id = 4;
  double order_cost = 5;
  OrderStatus status = 6;
  google.protobuf.Timestamp creation_date = 7;
  google.protobuf.Timestamp finish_date = 8;
  repeated OrderProduct products = 9;
}

message OrderProduct {
  string product_uuid = 1;
  string order_uuid = 2;
  double result_price = 3;
  int32 amount = 4;
  Product product = 5;
}

message CreateOrderRequest {
  string comment = 1;
  string user_id = 2;
  string staff_id = 3;
  repeated OrderProductInput products = 4;
}

message OrderProductInput {
  string product_uuid = 1;
  int32 amount = 2;
}

message GetOrderRequest {
  string uuid = 1;
}

message ListOrderRequest {
  int32 limit = 1;
  int32 offset = 2;
  OrderStatus status = 3;
}

message ListOrderResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  string uuid = 1;
  optional string comment = 2;
  optional OrderStatus status = 3;
}

message DeleteOrderRequest {
  string uuid = 1;
}

message GetProductsRequest {
  string order_uuid = 1;
}

service OrderService {
  rpc Create(CreateOrderRequest) returns (Order);
  rpc Get(GetOrderRequest) returns (Order);
  rpc List(ListOrderRequest) returns (ListOrderResponse);
  rpc Update(UpdateOrderRequest) returns (Order);
  rpc Delete(DeleteOrderRequest) returns (google.protobuf.Empty);
  rpc GetProducts(GetProductsRequest) returns (ListResponse);
}